@@ -1,10 +1,6 @@
 package org.brapi.test.BrAPITestServer.service.germ;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.Map.Entry;
 
@@ -72,12 +68,12 @@ public class CrossService {
 		Pageable pageReq = PagingUtility.getPageRequest(metadata);
 		SearchQueryBuilder<CrossEntity> searchQuery = new SearchQueryBuilder<CrossEntity>(CrossEntity.class);
 		if (crossDbId != null)
-			searchQuery = searchQuery.appendSingle(crossDbId, "id");
+			searchQuery = searchQuery.appendSingle(UUID.fromString(crossDbId), "id");
 		if (crossingProjectDbId != null)
-			searchQuery = searchQuery.appendSingle(crossingProjectDbId, "crossingProject.id");
+			searchQuery = searchQuery.appendSingle(UUID.fromString(crossingProjectDbId), "crossingProject.id");
 		if (externalReferenceID != null && externalReferenceSource != null)
-			searchQuery = searchQuery.withExRefs(Arrays.asList(externalReferenceID),
-					Arrays.asList(externalReferenceSource));
+			searchQuery = searchQuery.withExRefs(List.of(externalReferenceID),
+                    List.of(externalReferenceSource));
 		if (plannedCross != null)
 			searchQuery = searchQuery.appendSingle(plannedCross, "planned");
 
@@ -90,10 +86,7 @@ public class CrossService {
 		if(isPlanned == null) {
 			isPlanned = false;
 		}
-		if(crossDbId == null) {
-			crossDbId = "";
-		}
-		return crossRepository.findByIdAndPlanned(crossDbId, isPlanned);
+		return crossRepository.findByIdAndPlanned(UUID.fromString(crossDbId), isPlanned);
 	}
 	
 	public List<Cross> saveCrosses(@Valid List<CrossNewRequest> body) throws BrAPIServerException {
@@ -132,7 +125,7 @@ public class CrossService {
 		List<Cross> savedValues = new ArrayList<>();
 
 		for (Entry<String, CrossNewRequest> crossEntry : body.entrySet()) {
-			Optional<CrossEntity> entityOpt = crossRepository.findById(crossEntry.getKey());
+			Optional<CrossEntity> entityOpt = crossRepository.findById(UUID.fromString(crossEntry.getKey()));
 			if (entityOpt.isPresent()) {
 				CrossEntity entity = entityOpt.get();
 				updateEntity(entity, crossEntry.getValue());
@@ -151,7 +144,7 @@ public class CrossService {
 		List<PlannedCross> savedValues = new ArrayList<>();
 
 		for (Entry<String, PlannedCrossNewRequest> crossEntry : body.entrySet()) {
-			Optional<CrossEntity> entityOpt = crossRepository.findById(crossEntry.getKey());
+			Optional<CrossEntity> entityOpt = crossRepository.findById(UUID.fromString(crossEntry.getKey()));
 			if (entityOpt.isPresent()) {
 				CrossEntity entity = entityOpt.get();
 				updateEntity(entity, crossEntry.getValue());
@@ -171,14 +164,14 @@ public class CrossService {
 			UpdateUtility.convertFromEntity(entity, cross);
 			convertFromEntity(entity, cross);
 			cross.setCrossAttributes(convertFromEntity(entity.getCrossAttributes()));
-			cross.setCrossDbId(entity.getId());
+			cross.setCrossDbId(entity.getId().toString());
 			cross.setCrossName(entity.getName());
 			if (entity.getPollinationEvents() != null && !entity.getPollinationEvents().isEmpty()) {
 				cross.setPollinationTimeStamp(
 						DateUtility.toOffsetDateTime(entity.getPollinationEvents().get(0).getPollinationTimeStamp()));
 			}
 			if (entity.getPlannedCross() != null) {
-				cross.setPlannedCrossDbId(entity.getPlannedCross().getId());
+				cross.setPlannedCrossDbId(entity.getPlannedCross().getId().toString());
 				cross.setPlannedCrossName(entity.getPlannedCross().getName());
 			}
 			if (entity.getPollinationEvents() != null) {
@@ -199,7 +192,7 @@ public class CrossService {
 		if (entity != null) {
 			UpdateUtility.convertFromEntity(entity, planned);
 			convertFromEntity(entity, planned);
-			planned.setPlannedCrossDbId(entity.getId());
+			planned.setPlannedCrossDbId(entity.getId().toString());
 			planned.setPlannedCrossName(entity.getName());
 			planned.setStatus(entity.getStatus());
 		}
@@ -208,7 +201,7 @@ public class CrossService {
 
 	private void convertFromEntity(CrossEntity entity, CrossInterface cross) {
 		if (entity.getCrossingProject() != null) {
-			cross.setCrossingProjectDbId(entity.getCrossingProject().getId());
+			cross.setCrossingProjectDbId(entity.getCrossingProject().getId().toString());
 			cross.setCrossingProjectName(entity.getCrossingProject().getName());
 		}
 		cross.setCrossType(entity.getCrossType());
